--- a/researcher/templates/researcher/layouts/base_layout.html
+++ b/researcher/templates/researcher/layouts/base_layout.html
@@ -22,7 +22,7 @@
       <img src="{% static 'researcher/img/logoName.png' %}" alt="chamranTeam">
       <div class="dropdown">
         <button type="button" name="button" class="btn dropdown-toggle" id="dropdown-btn" data-toggle="dropdown">
-          <img src="{% static 'researcher/img/profile.jpg' %}" alt="profile" class="dropdown-img profile" height="45px">
+          <img src="{{user.researcheruser.researcherprofile.photo.url}}" alt="profile" class="dropdown-img profile" height="45px">
         </button>
         <ul class="dropdown-menu text-center" role="menu" aria-labelledby="dropdown-btn" id="dropdown">
           <li><a href="#">اطلاعات کاربری</a></li>
@@ -38,13 +38,13 @@
     <div class="side-bar">
       <div class="topMargin"></div>
       <div class="researcher-icon"></div>
-      <img src="{% static 'researcher/img/profile.jpg' %}" alt="profile" class="profile" width="150px" height="150px">
-      <h5>{% block name %}{% endblock %}</h5>
+      <img src="{{user.researcheruser.researcherprofile.photo.url}}" alt="profile" class="profile" width="150px" height="150px">
+      <h5>{{user.researcheruser.researcherprofile.first_name}}</h5>
       <h6>پژوهشگر</h6>
-      <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ score|default:0 }}</span>/100</p>
+      <p dir="rtl" class="scoreDiv text-right">امتیاز: <span>{{ user.researcheruser.points|default:0 }}</span>/100</p>
       <div class="progress">
-        <div class="progress-bar" role="progressbar" aria-valuenow="{{ score|default:0 }}" aria-valuemin="0" aria-valuemax="100" style="width: 70px">
-          <span class="sr-only">{{ score|default:0 }}% completed</span>
+        <div class="progress-bar" role="progressbar" aria-valuenow="{{ user.researcheruser.points|default:0 }}" aria-valuemin="0" aria-valuemax="100" style="width: 70px">
+          <span class="sr-only">{{ user.researcheruser.points|default:0 }}% completed</span>
         </div>
       </div>
       <div class="hr"></div>
@@ -84,7 +84,7 @@
         </li>
         {% url 'userInfo' as userInfo%}
         <li class="list-group-item text-right {% if request.get_full_path == userInfo %}active{% endif %}">
-          <a href="#">
+          <a href="{% url 'researcher:userInfo' %}">
             <div>
               <span>تنظیمات کاربری</span>
               <span class="fas fa-cog"></span>
