--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -1,13 +1,15 @@
 {% extends "expert/layouts/base_layout.html" %}
 
+{% load static %}
+
 {% block title %}<title>پروژه ها</title>{% endblock %}
 
 {% block initial_information %}
     {% include 'expert/layouts/initial_information.html' %}
 {% endblock %}
+
 {% block blur %}blur-div{% endblock %}
 
-<<<<<<< HEAD
 {% block name %}دکتر احسان شریف{% endblock %}
 
 {% block dialog %}
@@ -23,14 +25,10 @@
             </div>
         </div>
     </div>
-<<<<<<< HEAD
-=======
+
 {% endblock %}
 {% block script %}
     <script type="text/javascript" src="{% static 'expert/js/jquery.emojipicker.js' %}"></script>
     <script type="text/javascript" src="{% static 'expert/js/jquery.emojis.js' %}"></script>
->>>>>>> a437e573a91c12313bf99138fb06e1c01eae7a91
 {% endblock %}
-=======
-{% block name %}رضا باسره{% endblock %}
->>>>>>> parent of a437e57... "Projects" Section Front-End + "Researcher Apply" Section Front-End
+
