--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -1,20 +1,18 @@
 {% extends "expert/layouts/base_layout.html" %}
-
 {% load static %}
 
-{% block title %}<title>پروژه ها</title>{% endblock %}
+{% block title %}پروژه ها{% endblock %}
 
 {% block initial_information %}
-    {% include 'expert/layouts/initial_information.html' %}
+{#    {% include 'expert/layouts/initial_information.html' %}#}
 {% endblock %}
 
-{% block blur %}blur-div{% endblock %}
-
-{% block name %}دکتر احسان شریف{% endblock %}
+{% block name %} دکتر احسان شریف{% endblock %}
 
 {% block dialog %}
     {% include 'expert/layouts/project_details.html' %}
     {% include 'expert/layouts/showProject.html' %}
+    {% include 'expert/layouts/vote_dialog.html' %}
 {% endblock %}
 
 {% block content %}
@@ -25,10 +23,9 @@
             </div>
         </div>
     </div>
-
 {% endblock %}
 {% block script %}
     <script type="text/javascript" src="{% static 'expert/js/jquery.emojipicker.js' %}"></script>
     <script type="text/javascript" src="{% static 'expert/js/jquery.emojis.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
 {% endblock %}
-
