--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -1,15 +1,19 @@
 {% extends "expert/layouts/base_layout.html" %}
 {% load static %}
-{% block title %}<title>تنظیمات کاربری</title>{% endblock %}
+{% block title %}تنظیمات کاربری{% endblock %}
 {% block header %}
-    <link rel="stylesheet" href="{% static 'expert/css/persian-datepicker.min.css' %}">
+    <link rel="stylesheet" href="{% static 'expert/css/persian-datepicker.min.css' %}"
+          xmlns="http://www.w3.org/1999/html">
     <link rel="stylesheet" href="{% static 'expert/css/datepicker-style.css' %}">
-    <link href="{% static 'expert/css/fancytree-style.css' %}" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.30.2/skin-awesome/ui.fancytree.min.css" rel="stylesheet">
 {% endblock %}
-{% block name %}رضا باسره{% endblock %}
+
+{% block name %}دکتر احسان شریف{% endblock %}
+
 {% block dialog %}
     {% include 'expert/layouts/dialog.html' %}
 {% endblock %}
+
 {% block content %}
     <div class="row">
         <div class="col-lg-12">
@@ -64,8 +68,8 @@
                           <div class="col-lg-12">
                               <label for="Uni">دانشگاه محل فعالیت</label>
                               <input type="text" id="Uni" class="w-100">
-                              <i class="fas fa-plus fa-lg"></i>
-                              <div class="selected_uni"></div>
+{#                              <i class="fas fa-plus fa-lg"></i>#}
+{#                              <div class="selected_uni"></div>#}
                           </div>
                       </div>
                         <div class="row">
@@ -95,8 +99,35 @@
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <span class="label header">سوابق علمی</span>
-                                <div class="education"></div>
-                                <button class="chamran_btn education-btn" type="button">افزودن</button>
+                                <div class="education text-center w-100">
+                                    <span class="initial-value" style="border: 1px dashed #bdbdbd;width: fit-content;border-radius: 0.25em;padding: 5px 10px;font-size: 13px;font-weight: 300;">برای افزودن سابقه جدید روی <i class="fas fa-plus"></i>  کلیک کنید!  </span>
+{#                                    <table class="table mtop-lg-25">#}
+{#                                        <thead>#}
+{#                                            <tr>#}
+{#                                                <td>مقطع تحصیلی</td>#}
+{#                                                <td>رشته تحصیلی</td>#}
+{#                                                <td>دانشگاه</td>#}
+{#                                                <td>شهر محل تحصیل</td>#}
+{#                                                <td>سال اخذ مدرک</td>#}
+{#                                                <td></td>#}
+{#                                            </tr>#}
+{#                                        </thead>#}
+{#                                        <tbody>#}
+{#                                            <tr>#}
+{#                                                <td>کارشناسی</td>#}
+{#                                                <td>مهندسی برق</td>#}
+{#                                                <td>صنعتی شریف</td>#}
+{#                                                <td>تهران</td>#}
+{#                                                <td>1400</td>#}
+{#                                                <td>#}
+{#                                                    <i class="fas fa-pen"></i>#}
+{#                                                    <i class="fas fa-trash-alt"></i>#}
+{#                                                </td>#}
+{#                                            </tr>#}
+{#                                        </tbody>#}
+{#                                    </table>#}
+                                </div>
+                                <span class="education-btn"><i class="fas fa-plus fa-lg" data-toggle="tooltip" data-placement="left" title="افزودن"></i></span>
                             </div>
                         </div>
                     </div>
@@ -104,8 +135,35 @@
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <span class="label header">سوابق اجرایی</span>
-                                <div class="executive"></div>
-                                <button class="chamran_btn executive-btn" type="button">افزودن</button>
+                                <div class="executive text-center w-100">
+{#                                    <span class="initial-value" style="border: 1px dashed #bdbdbd;width: fit-content;border-radius: 0.25em;padding: 5px 10px;font-size: 13px;font-weight: 300;">برای افزودن سابقه جدید روی <i class="fas fa-plus"></i>  کلیک کنید!  </span>#}
+                                    <table class="table mtop-lg-25">
+                                        <thead>
+                                            <tr>
+                                                <td>سمت</td>
+                                                <td>محل خدمت</td>
+                                                <td>شهر</td>
+                                                <td>از تاریخ</td>
+                                                <td>تا تاریخ</td>
+                                                <td></td>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>برنامه نویس</td>
+                                                <td>چمران تیم</td>
+                                                <td>تهران</td>
+                                                <td>1/1/1398</td>
+                                                <td>1/6/1398</td>
+                                                <td>
+                                                    <i class="fas fa-pen"></i>
+                                                    <i class="fas fa-trash-alt"></i>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <span class="executive-btn"><i class="fas fa-plus fa-lg" data-toggle="tooltip" data-placement="left" title="افزودن"></i></span>
                             </div>
                         </div>
                     </div>
@@ -113,8 +171,33 @@
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <span class="label header">سوابق پژوهشی <span class="sub-header">(بهترین ها طی پنج سال گذشته)</span></span>
-                                <div class="studious"></div>
-                                <button class="chamran_btn studious-btn" type="button">افزودن</button>
+                                <div class="studious text-center w-100">
+{#                                    <span class="initial-value" style="border: 1px dashed #bdbdbd;width: fit-content;border-radius: 0.25em;padding: 5px 10px;font-size: 13px;font-weight: 300;">برای افزودن سابقه جدید روی <i class="fas fa-plus"></i>  کلیک کنید!  </span>#}
+                                    <table class="table mtop-lg-25">
+                                        <thead>
+                                            <tr>
+                                                <td>عنوان طرح پژوهشی</td>
+                                                <td>مجری</td>
+                                                <td>مسئول اجرا/ همکار</td>
+                                                <td>وضعیت طرح پژوهشی</td>
+                                                <td></td>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>نمی دونم</td>
+                                                <td>سپهر خان</td>
+                                                <td>علی آقا</td>
+                                                <td>فعال</td>
+                                                <td>
+                                                    <i class="fas fa-pen"></i>
+                                                    <i class="fas fa-trash-alt"></i>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <span class="studious-btn"><i class="fas fa-plus fa-lg" data-toggle="tooltip" data-placement="left" title="افزودن"></i></span>
                             </div>
                         </div>
                     </div>
@@ -122,8 +205,35 @@
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <span class="label header">مقالات <span class="sub-header">(چند مورد از بهترین مقالات)</span></span>
-                                <div class="article"></div>
-                                <button class="chamran_btn article-btn" type="button">افزودن</button>
+                                <div class="article text-center w-100">
+{#                                    <span class="initial-value" style="border: 1px dashed #bdbdbd;width: fit-content;border-radius: 0.25em;padding: 5px 10px;font-size: 13px;font-weight: 300;">برای افزودن سابقه جدید روی <i class="fas fa-plus"></i>  کلیک کنید!  </span>#}
+                                    <table class="table mtop-lg-25">
+                                        <thead>
+                                            <tr>
+                                                <td>عنوان مقاله</td>
+                                                <td>تاریخ انتشار</td>
+                                                <td>محل دقیق انتشار</td>
+                                                <td>Impact Factor</td>
+                                                <td>تعداد ارجاع</td>
+                                                <td></td>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>کارشناسی</td>
+                                                <td>مهندسی برق</td>
+                                                <td>صنعتی شریف</td>
+                                                <td>تهران</td>
+                                                <td>1400</td>
+                                                <td>
+                                                    <i class="fas fa-pen"></i>
+                                                    <i class="fas fa-trash-alt"></i>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <span class="article-btn"><i class="fas fa-plus fa-lg" data-toggle="tooltip" data-placement="left" title="افزودن"></i></span>
                             </div>
                         </div>
                     </div>
@@ -287,12 +397,12 @@
 {% endblock %}
 {% block script %}
     <script type="text/javascript" src="{% static 'expert/js/persian-datepicker.min.js' %}"></script>
-<<<<<<< HEAD
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.fancytree/2.30.2/jquery.fancytree-all-deps.min.js"></script>
     <script type="text/javascript">
         $("#fancy-tree").fancytree({
           extensions: ["glyph"],
           // checkbox: true,
+
           source: [{"title": "Node 1", "key": "1"},
                  {"title": "تکنیک شماره یک", "key": "2", "folder": true, "children": [
                     {"title": "Node 2.1", "key": "3"},
@@ -363,7 +473,4 @@
           },
       });
     </script>
-=======
-    <script src="//cdn.jsdelivr.net/npm/jquery.fancytree@2.27/dist/jquery.fancytree-all-deps.min.js"></script>
->>>>>>> parent of a437e57... "Projects" Section Front-End + "Researcher Apply" Section Front-End
 {% endblock %}
