The Whole Project Debugged

--- a/expert/templates/expert/layouts/projectList.html
+++ b/expert/templates/expert/layouts/projectList.html
@@ -10,6 +10,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="card project-item">
+                            <div class="alert"><span>فرم نظرسنجی فعال شده است!</span></div>
                             <span class="header">محلول کشت سلولی <span class="sub-header">( 2 ماه قبل )</span></span>
                             <span><i class="far fa-envelope"></i> پیام ها </span>
                             <span><i class="fas fa-dollar-sign"></i><span>35,000,000</span> ریال </span>
