--- a/expert/templates/expert/layouts/project_details.html
+++ b/expert/templates/expert/layouts/project_details.html
@@ -2,7 +2,9 @@
 <div class="dialog-main project-details">
     <div class="card text-right dialog">
         <div class="close"></div>
-        <div class="vote"><i class="fas fa-ellipsis-v"></i><i class="fas fa-chevron-down"></i></div>
+        <div class="vote">
+            <span class="dots"></span>
+        </div>
         <div class="vote-dialog">
             <div class="card industry-back text-center">ارزیابی از صنعت</div>
             <div class="card researcher-back text-center">ارزیابی از پژوهشگر</div>
